2004-09-19  Michael Stucki  <mundaun@gmx.ch>

	* Replaced all (comments AND code!) occurences of "writeable" with "writable"
	* Fixed bug #0000171: Displaying wrong filepermissions in filelist module
	* Fixed bug #0000261: fileDenyPattern default does not include ".php4"
	* Fixed bug #0000298: Browser client Konqueror not recognized
	* Fixed bug #0000362: Changed field length of sys_log[IP] to 39 (IPv6 related, patch by Sven Wilhelm)

2004-09-19  Ingmar Schlecht  <ingmars@web.de>

	* Fixed bug #0000248: Highlighting color of BE module is now the same as highlighting color in the page tree

2004-09-19  Ingmar Schlecht  <ingmars@web.de>

	* Changed <meta name="generator" content="TYPO3 3.6 CMS" /> tag in class.tslib_pagegen.php to reflect version 3.7. Should be changed to something dynamic in the future! (see bug #0000318)

2004-09-19  Ingmar Schlecht  <ingmars@web.de>

	* Fixed bug #0000365: Made comparing md5 hashes of t3x files in mod/tools/em/index.php ignore leading whitespaces. Patch by Martin T. Kutschker <Martin-no5pam-Kutschker@blackbox.n0spam.net>

2004-09-17  Ingmar Schlecht  <ingmars@web.de>

	* Fixed bug #0000181: Added the word "JavaScript" to the note on the BE login page. It's now: "(Note: Cookies and JavaScript must be enabled!)"

2004-09-15  Ingmar Schlecht  <ingmars@web.de>

	* Fixed bug #0000353: In typo3/wizard_add.php removed call to non-existing printContent() method. It doesn't need to print anything.

2004-09-14  Michael Stucki  <mundaun@gmx.ch>

	* Release of TYPO3 3.7.0RC1

2004-09-14  Michael Stucki  <mundaun@gmx.ch>

	* Fixed bug #0000159: Logging did not work with absolute logfile_dir specified. However this will still work only if the specified path is within either PATH_site or lockRootPath.
	* The BE login screen now shows the sitename by default
	* Fixed a typo in config_default.php
	* Changed description for lockRootPath

2004-09-14  Ingmar Schlecht  <ingmars@web.de>
